--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@zxing/browser": "0.0.5",
     "@zxing/library": "^0.18.3",
     "@zxing/ngx-scanner": "^3.0.0",
+    "angular-animations": "^0.11.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
