--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@zxing/library": "^0.18.3",
     "@zxing/ngx-scanner": "^3.0.0",
     "angular-animations": "^0.11.0",
+    "bootstrap": "^4.5.3",
+    "primeicons": "^4.1.0",
+    "primeng": "^10.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
